--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.thymeleaf.encoding=UTF-8
 # spring.jpa.hibernate.ddl-auto=create
 # spring.jpa.hibernate.ddl-auto=create-drop
 # spring.jpa.hibernate.ddl-auto=validate
-# spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 # ----------------------------------
 
 # ENTITY CLASS MAPPING
@@ -25,19 +25,20 @@ spring.jpa.hibernate.use-new-id-generator-mappings=true
 
 # -------------------------------------------------------- INICIO DAS CONEXÕES COM O BANCO DE DADOS!!!
 ###### MYSQL ##### DATA BASE CONNECTION
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/odontoreloaded?createDatabaseIfNotExist=true&serverTimezone=UTC
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-#spring.datasource.username=root
-#spring.datasource.password=kabala
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/odontoreloaded?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.username=root
+spring.datasource.password=kabala
 
 ###### FIREBIRD ##### DATA BASE CONNECTION
-spring.datasource.url=jdbc:firebirdsql://127.0.0.1:3050/C:/Z_DBASE_STORAGE/FBIRD/DB_MVC.FDB?setEncoding=UTF8
+# O PRIMEIRO ABAIXO ESTAVA SENDO UTILIZADO NO TESTE COM FIREBIRD 3.0
+# spring.datasource.url=jdbc:firebirdsql://127.0.0.1:3050/C:/Z_DBASE_STORAGE/FBIRD/DB_MVC.FDB?setEncoding=UTF8
 # spring.datasource.url=jdbc:firebirdsql://127.0.0.1:3050/C:/Z_DBASE_STORAGE/FBIRD/DB_MVC_TESTES_SQL.FDB?setEncoding=UTF8
-spring.datasource.driver-class-name=org.firebirdsql.jdbc.FBDriver
-spring.jpa.database-platform = org.hibernate.dialect.FirebirdDialect
-spring.datasource.username=SYSDBA
-spring.datasource.password=4b6f4194
+# spring.datasource.driver-class-name=org.firebirdsql.jdbc.FBDriver
+# spring.jpa.database-platform = org.hibernate.dialect.FirebirdDialect
+# spring.datasource.username=SYSDBA
+# spring.datasource.password=4b6f4194
 
 # ----------------------------------
 # BASIC DOCUMENTATION USO FIREBIRD PARA AMBIENTE JAVA
