--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,13 +17,23 @@ spring.thymeleaf.encoding=UTF-8
 # spring.jpa.hibernate.ddl-auto=create
 # spring.jpa.hibernate.ddl-auto=create-drop
 # spring.jpa.hibernate.ddl-auto=validate
-# spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 # ----------------------------------
 
 # ENTITY CLASS MAPPING
 spring.jpa.hibernate.use-new-id-generator-mappings=true
 
+# -------------------------------------------------------- dBase para O Heroku
+# spring.datasource.url=${JDBC_DATASOURCE_URL}
+
 # -------------------------------------------------------- INICIO DAS CONEXÕES COM O BANCO DE DADOS!!!
+###### MYSQL ##### DATA BASE CONNECTION
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/odontoreloaded?createDatabaseIfNotExist=true
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.username=postgres
+spring.datasource.password=kabala
+
 ###### MYSQL ##### DATA BASE CONNECTION
 #spring.datasource.url=jdbc:mysql://127.0.0.1:3306/odontoreloaded?createDatabaseIfNotExist=true&serverTimezone=UTC
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -32,12 +42,13 @@ spring.jpa.hibernate.use-new-id-generator-mappings=true
 #spring.datasource.password=kabala
 
 ###### FIREBIRD ##### DATA BASE CONNECTION
-spring.datasource.url=jdbc:firebirdsql://127.0.0.1:3050/C:/Z_DBASE_STORAGE/FBIRD/DB_MVC.FDB?setEncoding=UTF8
+# NO FIREBIRD ESTAVA SENDO UTILIZADA A PRIMEIRA LINHA ABAIXO
+# spring.datasource.url=jdbc:firebirdsql://127.0.0.1:3050/C:/Z_DBASE_STORAGE/FBIRD/DB_MVC.FDB?setEncoding=UTF8
 # spring.datasource.url=jdbc:firebirdsql://127.0.0.1:3050/C:/Z_DBASE_STORAGE/FBIRD/DB_MVC_TESTES_SQL.FDB?setEncoding=UTF8
-spring.datasource.driver-class-name=org.firebirdsql.jdbc.FBDriver
-spring.jpa.database-platform = org.hibernate.dialect.FirebirdDialect
-spring.datasource.username=SYSDBA
-spring.datasource.password=4b6f4194
+# spring.datasource.driver-class-name=org.firebirdsql.jdbc.FBDriver
+# spring.jpa.database-platform = org.hibernate.dialect.FirebirdDialect
+# spring.datasource.username=SYSDBA
+#spring.datasource.password=4b6f4194
 
 # ----------------------------------
 # BASIC DOCUMENTATION USO FIREBIRD PARA AMBIENTE JAVA
