--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,15 +24,15 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.use-new-id-generator-mappings=true
 
 # -------------------------------------------------------- dBase para O Heroku
-# spring.datasource.url=${JDBC_DATASOURCE_URL}
+spring.datasource.url=${JDBC_DATASOURCE_URL}
 
 # -------------------------------------------------------- INICIO DAS CONEXÕES COM O BANCO DE DADOS!!!
 ###### MYSQL ##### DATA BASE CONNECTION
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/odontoreloaded?createDatabaseIfNotExist=true
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.username=postgres
-spring.datasource.password=kabala
+# spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/odontoreloaded?createDatabaseIfNotExist=true
+# spring.datasource.driver-class-name=org.postgresql.Driver
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# spring.datasource.username=postgres
+# spring.datasource.password=kabala
 
 ###### MYSQL ##### DATA BASE CONNECTION
 #spring.datasource.url=jdbc:mysql://127.0.0.1:3306/odontoreloaded?createDatabaseIfNotExist=true&serverTimezone=UTC
