--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,13 @@
 		    <version>4.0.0.java11</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+		<dependency>
+		    <groupId>org.postgresql</groupId>
+		    <artifactId>postgresql</artifactId>
+		    <version>42.2.12</version>
+		</dependency>		
+		
 		<!-- OBS OBRIGATORIO UTILIZAR O JDBC DO SPRING AO UTILIZAR DRIVER COMO OS DO FIREBIRD? SIM!!! -->
 <!-- 		<dependency> -->
 <!-- 			<groupId>org.springframework.boot</groupId> -->
