--- a/pom.xml
+++ b/pom.xml
@@ -54,11 +54,11 @@
 		</dependency>
 		
 		<!-- MYSQL DBASE DRIVER -->
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<scope>runtime</scope>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>mysql</groupId> -->
+<!-- 			<artifactId>mysql-connector-java</artifactId> -->
+<!-- 			<scope>runtime</scope> -->
+<!-- 		</dependency> -->
 		
 		<!-- FIREBIRD DBASE DRIVER -->
 <!-- 		<dependency> -->
@@ -68,11 +68,11 @@
 <!-- 		</dependency> -->
 
 		<!-- https://mvnrepository.com/artifact/org.firebirdsql.jdbc/jaybird -->
-		<dependency>
-		    <groupId>org.firebirdsql.jdbc</groupId>
-		    <artifactId>jaybird</artifactId>
-		    <version>4.0.0.java11</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 		    <groupId>org.firebirdsql.jdbc</groupId> -->
+<!-- 		    <artifactId>jaybird</artifactId> -->
+<!-- 		    <version>4.0.0.java11</version> -->
+<!-- 		</dependency> -->
 		
 		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
 		<dependency>
@@ -128,10 +128,7 @@
 			<version>1.14.3</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.flywaydb</groupId>
-			<artifactId>flyway-core</artifactId>
-		</dependency>
+		
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
