7º COMMIT COM DBASE POSTGRESQL PLUS HEROKU TESTE

--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
 		<dependency>
 		    <groupId>org.postgresql</groupId>
 		    <artifactId>postgresql</artifactId>
-		    <version>42.2.12</version>
+<!-- 		    <version>42.2.12</version> -->
 		</dependency>		
 		
 		<!-- OBS OBRIGATORIO UTILIZAR O JDBC DO SPRING AO UTILIZAR DRIVER COMO OS DO FIREBIRD? SIM!!! -->
