8º COMMIT COM DBASE POSTGRESQL PLUS HEROKU TESTE

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-server.port=8081
+# java.runtime.version=11
+# server.port=8081
 
 spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.encoding=UTF-8
